--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
             const element = document.getElementById(elementId);
             element.textContent = message;
             element.className = `message ${type}`;
+            // Spinner ko hide kar jab koi message dikhe
+            hideLoading(); 
             setTimeout(() => {
                 element.textContent = '';
                 element.className = 'message';
@@ -375,18 +377,16 @@
 
         async function checkLoginStatus() {
             console.log("Frontend Debug: Checking login status from backend.");
-            // showLoading("Login status check kar raha hoon..."); // Spinner dikha
             const data = await fetchData(`${backendUrl}/check_login_status`);
             console.log("Frontend Debug: Login status response:", data);
             
             if (data.status === 'logged_in') {
                 updateLoginUI(true, data.username);
-                showMessage('login-message', `Session found for ${data.username}!`, 'info'); // Status dikha
+                showMessage('login-message', `Session found for ${data.username}!`, 'info');
             } else {
                 updateLoginUI(false);
-                showMessage('login-message', 'Koi active session nahi mila. Login kar, bhen ke laude!', 'warning'); // Status dikha
+                showMessage('login-message', 'Koi active session nahi mila. Login kar, bhen ke laude!', 'warning');
             }
-            // hideLoading(); // Spinner hata
         }
 
         function toggleSpamTarget() {
